[package]
name = "get_voltage_dataf64"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.32", features = ["binstart"] }
esp-idf-svc = { version="=0.45", features = ["experimental", "alloc"] }
embedded-svc = "0.24"
log = "0.4"
anyhow = "1"
embedded-hal = "=1.0.0-alpha.9"
esp-idf-hal = "0.40.1"
mcp342x = { git ='https://github.com/nihinihikun/MCP342x',branch ='main' }
[build-dependencies]
embuild = "0.28"
anyhow = "1"